<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity"
    android:background="@color/white">

    <ScrollView android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout android:id="@+id/viewPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="62dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp">

            <EditText android:id="@+id/txtCpf"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext"
                style="@style/app.widget.edittext.singleline"
                android:inputType="number"
                android:imeOptions="actionDone"
                android:hint="@string/login_txt_cpf"/>

            <EditText android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext"
                style="@style/app.widget.edittext.singleline"
                android:hint="@string/login_txt_password_card"
                android:layout_marginTop="48dp"
                android:inputType="numberPassword"
                android:imeOptions="actionDone"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="62dp">

                <Button android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button"
                    android:text="@string/login_btn_login"
                    style="@style/app.widget.btn.fill.rounded" />

                <ProgressBar
                    android:id="@+id/loadingLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignTop="@+id/btnLogin"
                    android:layout_alignBottom="@+id/btnLogin"
                    android:visibility="invisible"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>